--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <title>Random stuff Index</title>
   <script src="random.js"></script>
   <style>
-    div.mainBlock {
-    background-color: lightblue;
 
-    margin-right: 50px;
-    }
   </style>
 </head>
 <body>
   <h1>Random stuff page</h1>
+  <ol>
+    <li><a href="week1/">Week01</a></li>
+    <li>Week02</li>
+    <li>Week03</li>
+    <li>Week04</li>
+  </ol>
+  
   <p id="testid"></p>
-
+  <button type="button" onclick="testFunction()">Try it</button>
+  
 </body>
 </html>
