--- a/week1/notes/notes.html
+++ b/week1/notes/notes.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Week1</title>
+  <title>Notes</title>
 </head>
 <body>
-  <h1>Week 1</h1>  
-  <a href="../notes/notes.html">Notes</a>
+  <h1>Notes</h1>  
+    
 </body>
 </html>
