--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1>Random stuff page</h1>
   <ol>
-    <li><a href="week1/week1index.html">Week01</a></li>
+    <li><a href="week1/index.html">Week01</a></li>
     <li>Week02</li>
     <li>Week03</li>
     <li>Week04</li>
