--- a/week1/index.html
+++ b/week1/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Week 1</h1>  
-  <a href="../notes/notes.html">Notes</a>
+  <a href="notes/notes.html">Notes</a>
 </body>
 </html>
