--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 
   </style>
 </head>
-<body>
+<body onload="pageLoad()">
   <h1>Random stuff page</h1>
-  <ol>
-    <li><a href="week1/week1index.html">Week01</a></li>
-    <li>Week02</li>
-    <li>Week03</li>
-    <li>Week04</li>
-  </ol>
-  
-  <p id="testid"></p>
-  <button type="button" onclick="testFunction()">Try it</button>
+
+<p id="demo">Test</p>
+<button type="button" onclick="testFunction()">Click me</button>
+<ol id="dynamic"></ol>
+
+
+
   
 </body>
 </html>
