--- a/NEGL/construction.html
+++ b/NEGL/construction.html
@@ -37,15 +37,15 @@
        </a>
    
        </a>
-       <a href="http://127.0.0.1:5500/assign04/assign04.html#home">
+       <a href="NeglMainIndex.html">
          <img src="neglbrick2.jpg" alt="Negl brick">
        </a>
          <h1>NEGL Brickfilms</h1>
        <p>Stop motion videos by Erik Alcala</p>
        <div class="topnav">
-           <a href="http://127.0.0.1:5500/assign04/assign04.html#home">Home</a>
-           <a href="http://127.0.0.1:5500/assign04/assign04_2.html">Videos</a>
-           <a class="active" href="http://127.0.0.1:5500/assign04/construction.html">Contact</a>
+           <a href="NeglMainIndex.html">Home</a>
+           <a href="NeglVideoIndex.html">Videos</a>
+           <a class="active" href="construction.html">Contact</a>
    
          </div>
        
@@ -53,7 +53,7 @@
  <div>
     <h1>Sorry</h1>
     <p class="body">    We are still building this site.</p>
-    <a href="http://127.0.0.1:5500/assign04/assign04.html#home">BACK to Negl Home</a>
+    <a href="NeglMainIndex.html">BACK to Negl Home</a>
   </div>
   <footer>
       <hr> 
