--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h2>Serving as the launch pad for my pet projects</h2>
   <img id="smallImage" src="Me.jpeg" alt="My Picture">
 
-<p id="demo">Test</p>
+<p id="demo">Random paragraph to Test Changes</p>
 <button type="button" onclick="testFunction()">Click me</button>
 <ol id="indexList"></ol>
 
